--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,4 @@
 <h1>Iniciar Seção</h1>
+<div class="card flex justify-content-center">
+  <p-button label="Check" icon="pi pi-check"></p-button>
+</div>
