--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,12 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+
+
+
+section{
+  padding: 0 2rem;
+}
+
+footer{
+  padding: 0 2rem;
+}
