--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,10 +1,10 @@
 <h1>Iniciar Seção</h1>
 <div class="card flex justify-content-center">
-  <p-button
+  <button
     (click)="login(emailts, passwordts)"
     label="Check"
     icon="pi pi-check"
-  ></p-button>
+  ></button>
 </div>
 
 <div>
