--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,11 @@
 <h1>Iniciar Seção</h1>
-<div class="card flex justify-content-center">
+<!-- <div class="card flex justify-content-center">
   <button
     (click)="login(emailts, passwordts)"
     label="Check"
     icon="pi pi-check"
   ></button>
-</div>
+</div> -->
 
 <div>
   <input [value]="emailts" type="email" />
