--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,6 +14,16 @@
     <button type="submit">Entrar</button>
   </form>
 </div>
+
+<div *ngIf="logado">
+  <h2>Login efetuado</h2>
+
+  <button (click)="logout()">Logout</button>
+
+
+</div>
+
+
 <!-- </body> -->
 
 <!-- <body>
