--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,75 +1,39 @@
-// * {
-//   padding: 0;
-//   margin: 0;
-// }
-// #login {
-//   border: solid 1px chocolate;
-//   background-color: azure;
-//   width: 300px;
-//   padding: 1rem;
-//   margin: auto;
-//   border-radius: 6px;
-// }
-// #login:hover {
-//   background-color: gray;
-// }
-
 body {
-  background-image: linear-gradient(to right, #797675, #343434);
+  background: linear-gradient(to right, #9b92ea, #b0d7f5);
 }
 
-#login1 {
-  margin: auto;
-  margin-top: 4rem;
-  width: 300px;
-  border: solid 1px green;
-}
-img {
-  width: 150px;
-  margin-left: 70px;
-}
-h1 {
-  text-align: center;
-}
-
-ul {
-  list-style: none;
-}
-
-input {
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  border-bottom: 1px solid black;
-  outline: none; /* Remove o contorno ao focar */
-  width: 200px;
-  padding: 9px;
-  background: transparent;
-}
-
-button {
-  width: 220px;
-  padding: 8px;
-  margin-right: 0px;
-  background: transparent;
-  margin-top: 5px;
-}
-button {
+#login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: solid 2px rgb(191, 193, 189);
   border: none;
+  width: 300px;
+  margin: auto;
+  margin-top: 100px;
 }
 
-button:hover {
-  background-color: gray;
+img {
+  display: flex;
+  align-items: center;
+  width: 150px;
+  margin-bottom: 15px;
 }
 
-.formulario {
-  margin-left: 36px;
+.inputs {
+  // position: relative;
+  margin-bottom: 10px;
 }
-// button {
-//   margin-left: 70px;
-//   padding: 5px;
+
+// .iconeImg {
+//   position: absolute;
+//   z-index: 1;
+//   transform: translateY(-50%);
+//   top: 50%;
 // }
 
-#g {
-  width: 230px;
+.buttonEntrar {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
 }
