--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,3 @@
-
 <body>
   <div id="login" *ngIf="!logado">
     <img src="../../../assets/imgs/user-icon-png.webp" alt="" />
@@ -19,6 +18,7 @@
         name="password"
         ngModel
         placeholder="Senha"
+        [feedback]="false"
       /><br />
       <p-button class="buttonEntrar" type="submit">Entrar</p-button>
     </form>
@@ -30,4 +30,3 @@
     <p-button (click)="logout()">Logout</p-button>
   </div>
 </body>
-
