--- a/src/app/components/adm/adm.component.html
+++ b/src/app/components/adm/adm.component.html
@@ -1,9 +1,6 @@
 <h1>Administrador</h1>
-<p>Bem vindo</p>
+
 <div *ngFor="let product of list">
-  <p>
-    {{ product.nome }} - {{ product.idade }}
-    <p-button label="apagar"></p-button>
-    <p-button label="adicionar"></p-button>
-  </p>
+  <p-button [label]="product.nome" [routerLink]="product.routerLink">
+  </p-button>
 </div>
