--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,41 +1,36 @@
-body {
+.container {
+  display: flex;
+  height: 100%;
   width: 100%;
-  height: 100vh;
-  background: linear-gradient(to right, #9b92ea, #b0d7f5);
+  background: linear-gradient(to right, #f7f8f8, #d5e3fa);
 }
-
 #login {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: solid 2px rgb(191, 193, 189);
-  border: none;
-  width: 300px;
+  // border: solid 1px #548f19;
+  // border: none;
+  width: 500px;
   margin: auto;
-  margin-top: 100px;
 }
-
 img {
-  display: flex;
-  align-items: center;
+  // display: flex;
+  // align-items: center;
   width: 150px;
   margin-bottom: 15px;
+  border-radius: 6px;
+}
+h1 {
+  color: #3f51b5;
+  margin-top: 0;
 }
 
-.inputs {
-  // position: relative;
-  margin-bottom: 10px;
+.btnn {
+  width: 400px;
 }
 
-// .iconeImg {
-//   position: absolute;
-//   z-index: 1;
-//   transform: translateY(-50%);
-//   top: 50%;
-// }
-
-.buttonEntrar {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
+@media (max-width: 390px) {
+  .btnn {
+    width: 330px;
+  }
 }
