--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,8 +1,5 @@
 .container {
   display: flex;
-  height: 100%;
-  width: 100%;
-  background: linear-gradient(to right, #f7f8f8, #d5e3fa);
 }
 #login {
   display: flex;
@@ -17,11 +14,12 @@ img {
   // display: flex;
   // align-items: center;
   width: 150px;
+  margin-top: 15px;
   margin-bottom: 15px;
   border-radius: 6px;
 }
 h1 {
-  color: #3f51b5;
+  // color: #3f51b5;
   margin-top: 0;
 }
 
