--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -21,14 +21,31 @@ img {
 h1 {
   // color: #3f51b5;
   margin-top: 0;
+  display: flex;
+  text-align: center;
 }
 
-.btnn {
+.input {
   width: 400px;
 }
 
+.btnEnter{
+  display: flex;
+}
+
+
+.btnEnterField{
+  width: 200px;
+  height: 60px;
+
+}
+
 @media (max-width: 390px) {
-  .btnn {
-    width: 330px;
+  .input {
+    width: 90vw !important;
+  }
+
+  .btnEnterField{
+    width: 90vw !important;
   }
 }
