--- a/src/app/components/adm/adm.component.html
+++ b/src/app/components/adm/adm.component.html
@@ -1,18 +1,19 @@
 <div class="container">
   <h1>Administrador</h1>
   <div class="buttons">
-    <div class="name">
-      <h2>Nome do estabelecimento</h2>
+
+    <div class="btn">
+      <div class="name">
+        <h2>{{barName}}</h2>
+      </div>
+      <button
+        mat-flat-button
+        *ngFor="let product of list; let i = index"
+        [class]="'product-class product-' + i"
+        color="primary">
+        <mat-icon>{{product.icon}}</mat-icon>
+        {{ product.nome }}
+      </button>
     </div>
-    <button
-      class="btn"
-      mat-flat-button
-      *ngFor="let product of list; let i = index"
-      [class]="'product-class product-' + i"
-      color="primary"
-    >
-      <i class="fa-solid fa-list"></i>
-      {{ product.nome }}
-    </button>
   </div>
 </div>
