--- a/src/app/components/adm/adm.component.scss
+++ b/src/app/components/adm/adm.component.scss
@@ -3,13 +3,6 @@
   flex-direction: column;
   align-items: center;
 }
-.buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  flex-wrap: wrap;
-}
 .name {
   width: 250px;
   height: 230px;
@@ -21,34 +14,40 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  button{
+  button {
     width: 250px;
     height: 230px;
-  border-radius: 19px;
-  font-size: 25px;
-
-
-
+    border-radius: 19px;
+    font-size: 25px;
+  }
+  mat-icon {
+    font-size: 25px;
+    padding: 7px;
   }
 }
 
-
 @media (max-width: 390px) {
   .container {
-    height: auto;
+    height: 100%;
   }
-  .buttons {
-    width: 200px;
-    height: 90%;
+  h1 {
+    font-size: 22px;
   }
   .name {
-    margin-top: 10px;
+    width: 100px;
+    height: 80px;
+    font-size: 13px;
   }
   .btn {
-    width: 85%;
-    height: 60px;
-    border-radius: 8px;
-    margin-top: 10px;
-    font-size: 20px;
+    button {
+      width: 100px;
+      height: 80px;
+      border-radius: 10px;
+      font-size: 11px;
+    }
+    mat-icon {
+      font-size: 13px;
+      padding: 0px;
+    }
   }
 }
