--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,7 @@ $boteco-theme: mat.define-light-theme(
 * {
   margin: 0;
   padding: 0;
+  font-family: "Philosopher", "Roboto", sans-serif;
 }
 section {
   padding: 0 2rem;
