--- a/src/app/components/waiter/waiter.component.scss
+++ b/src/app/components/waiter/waiter.component.scss
@@ -1,52 +1,52 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
-.section {
-  width: 350px;
+.buttons {
+  margin-left: 10%;
+}
+.name {
+  width: 250px;
   height: 230px;
-  text-align: center;
 }
 .status {
-  margin-top: 35px;
+  width: 250px;
+  height: 230px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 .pedidos-prontos {
   background: #1f84f0;
-  width: 100px;
-  height: 100px;
+  width: 110px;
+  height: 110px;
   border-radius: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   span {
     color: white;
-    font-size: 28px;
+    font-size: 45px;
     font-weight: bold;
   }
 }
-
 .text {
   color: #1f84f0;
   font-size: 28px;
   font-weight: bold;
   margin-top: 6px;
 }
-
-.buttons {
+.btn {
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
   gap: 1rem;
   margin-top: 10px;
-
+  // align-items: center;
+  // justify-content: center;
+  flex-wrap: wrap;
   button {
-    width: 350px;
+    width: 250px;
     height: 230px;
     border-radius: 19px;
     font-size: 25px;
@@ -61,17 +61,14 @@
   h1 {
     font-size: 22px;
   }
-  .section {
-    width: 120px;
-    height: 120px;
-  }
   .name {
-    h2 {
-      font-size: 16px;
-    }
+    width: 120px;
+    height: 100px;
+    font-size: 13px;
   }
   .status {
-    margin-top: 15px;
+    width: 120px;
+    height: 100px;
   }
   .pedidos-prontos {
     width: 50px;
@@ -84,12 +81,12 @@
     font-size: 16px;
     margin-top: 4px;
   }
-  .buttons {
+  .btn {
     button {
       width: 120px;
-      height: 120px;
+      height: 100px;
       border-radius: 10px;
-      font-size: 15px;
+      font-size: 11px;
     }
     mat-icon {
       font-size: 13px;
